# image

./: .cirrus.Dockerfile  .cirrus.yml  .codespellrc  .gitignore  .golangci.yml  .travis.Dockerfile  .travis.yml  CODE-OF-CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  OWNERS  README.md  SECURITY.md  copy.go  dind  directory.go  doc.go  docker-test.sh  docker.go  docker_image_dest.go  docker_image_src.go  go.mod  go.sum  inspect.go  inspect_v1.go  inspect_v2.go  layers.go  main.go  openshift.go  registries.conf  signing.go  skopeo.spec  tags.go  test.go  utils.go  vendor.conf  version.go
.github/: renovate.json  renovate.json5  renovate.readme
Godeps/: Godeps.json
copy/: blob.go  blob_test.go  compression.go  compression_test.go  copy.go  copy_test.go  digesting_reader.go  digesting_reader_test.go  encrypt.go  encryption.go  manifest.go  manifest_test.go  multiple.go  multiple_test.go  progress_bars.go  progress_bars_test.go  progress_channel_test.go  progress_reader.go  sign.go  sign_test.go  single.go  single_test.go  validate_gzip_test.go
directory/: directory.go  directory_dest.go  directory_src.go  directory_test.go  directory_transport.go  directory_transport_test.go
docker/: README  body_reader.go  body_reader_test.go  cache.go  distribution_error.go  distribution_error_test.go  docker.go  docker_client.go  docker_client_test.go  docker_image.go  docker_image_dest.go  docker_image_dest_test.go  docker_utils.go  (+17 more)
signature/internal/sequoia/rust/: Cargo.toml  README.md  build.rs
signature/internal/sequoia/rust/src/: error.rs  lib.rs  signature.rs
(+685 files in other folders)
